// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Cards/GoalProgressCard/Card No Progress Or Items 1`] = `
<div
  className="h-44 p-4"
>
  <div
    className="flex items-center rounded-lg"
  >
    <div
      className="mr-6 w-full"
    >
      <p
        className="mb-1 w-full text-16-light"
        data-testid="txt"
      >
        Hectors Restored
      </p>
      <p
        className="flex w-full items-baseline text-24-bold"
        data-testid="txt"
      >
        150
         
        <p
          className="text-16-light"
          data-testid="txt"
        />
      </p>
      <div
        className="h-[9px] w-full rounded-full bg-neutral-200 mt-2 bg-primary-200 opacity-0"
        role="progressbar"
      >
        <div
          className="h-full bg-primary rounded-full transition-all duration-300"
          style={
            Object {
              "width": "0.1%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Cards/GoalProgressCard/Card Progress And Items 1`] = `
<div
  className="h-44 p-4"
>
  <div
    className="flex items-center rounded-lg"
  >
    <div
      className="mr-6 w-full"
    >
      <p
        className="mb-1 w-full text-16-light"
        data-testid="txt"
      >
        Trees Restored
      </p>
      <p
        className="flex w-full items-baseline text-24-bold"
        data-testid="txt"
      >
        600
         
        <p
          className="text-16-light"
          data-testid="txt"
        >
          of 
          732
        </p>
        <p
          className="text-16-light"
          data-testid="txt"
        />
      </p>
      <div
        className="h-[9px] w-full rounded-full bg-neutral-200 mt-2 bg-primary-200"
        role="progressbar"
      >
        <div
          className="h-full bg-primary rounded-full transition-all duration-300"
          style={
            Object {
              "width": "81.9672131147541%",
            }
          }
        />
      </div>
    </div>
    <div
      className="w-full space-y-3 pl-6 "
    >
      <div
        className="flex w-full items-center"
      >
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
        <p
          className="w-[13vw] whitespace-nowrap text-16-light"
          data-testid="txt"
        >
          Organisations Joined
        </p>
        <p
          className="text-14-bold"
          data-testid="txt"
        >
          23
        </p>
      </div>
      <div
        className="flex w-full items-center"
      >
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
        <p
          className="w-[13vw] whitespace-nowrap text-16-light"
          data-testid="txt"
        >
          Trees Planed
        </p>
        <p
          className="text-14-bold"
          data-testid="txt"
        >
          1,332
        </p>
      </div>
      <div
        className="flex w-full items-center"
      >
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
        <p
          className="w-[13vw] whitespace-nowrap text-16-light"
          data-testid="txt"
        >
          Trash Removed 
        </p>
        <p
          className="text-14-bold"
          data-testid="txt"
        >
          530,000
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Cards/GoalProgressCard/Card Progress No Items 1`] = `
<div
  className="h-44 p-4"
>
  <div
    className="flex items-center rounded-lg"
  >
    <div
      className="mr-6 w-full"
    >
      <p
        className="mb-1 w-full text-16-light"
        data-testid="txt"
      >
        Workday (PPC)
      </p>
      <p
        className="flex w-full items-baseline text-24-bold"
        data-testid="txt"
      >
        75
         
        <p
          className="text-16-light"
          data-testid="txt"
        >
          of 
          150
        </p>
        <p
          className="text-16-light"
          data-testid="txt"
        />
      </p>
      <div
        className="h-[9px] w-full rounded-full bg-neutral-200 mt-2 bg-primary-200"
        role="progressbar"
      >
        <div
          className="h-full bg-primary rounded-full transition-all duration-300"
          style={
            Object {
              "width": "50%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
